Animate navigation and fix hero section on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,23 @@ a {
 }
 
 /* ================== */
+/* HERO HEADER */
+/* ================== */
+header {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    margin: 50px 10%;
+}
+
+header .hero-image {
+    width: 80%;
+}
+
+header .hero-title {
+    margin-top: 50px;
+}
+/* ================== */
 /* BUTTON STYLES */
 /* ================== */
 
@@ -176,7 +193,8 @@ nav ul li:hover:not(.active-link) a{
     height: 100%;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: flex-start;
+    justify-content: center;
+    margin-right: 10px;
 }
 
 .mobile-nav ul li {
@@ -203,8 +221,24 @@ nav ul li:hover:not(.active-link) a{
     text-align: center;
 }
 
+/* NAVIGATION ANIMATION */
 .show-nav {
+    animation-name: showIn;
+    animation-timing-function: ease-in-out;
+    animation-duration: 400ms;
     display: block;
+}
+
+@keyframes showIn {
+    0% {
+        opacity: 0;
+        transform: translateY(100%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 /* SECTION TITLE */
@@ -235,12 +269,12 @@ section {
     flex-flow: column wrap;
     align-items: center;
     margin-bottom: 40px;
-    min-height: 200px;
 }
 
 .hero-title,
 .hero-subtitle {
     font-family: 'Raleway', sans-serif;
+    text-align: center;
 }
 
 .hero-title {
@@ -284,7 +318,6 @@ section {
     border: 2px solid rgb(152, 255, 143);
 }
 
-
 /* ==================== */
 /* FEATURED ARTICLE SECTION */
 /* ==================== */
@@ -308,11 +341,11 @@ section {
 
 .article-title,
 .article-subtitle {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 400;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
     margin-top: 10px;
     order: -1;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
 }
 
 .article-title  {
@@ -381,6 +414,10 @@ section {
 }
 
 
+/* ==================== */
+/* CONTACT US SECTION */
+/* ==================== */
+
 
 /* ========================== */
 /* UTILS */
@@ -394,11 +431,6 @@ section {
 
 /* TABLET SIZE */
 @media (min-width: 768px) {
-    /* FOR TESTING ONLY */
-    /* body {
-        background-color: #555;
-    } */
-
     /* Hide Mobile Navigation */
     .mobile-nav,.nav-button {
         display: none !important;
@@ -411,10 +443,10 @@ section {
 
     /* Hero Section */
     header {
-        display: flex;
+        margin: 0;
         flex-flow: row nowrap;
         justify-content: space-between;
-        padding: 50px 20%;
+        padding: 50px 5%;
         margin-bottom: 3em;
         background-color: rgb(32, 32, 32);
         align-items: center;
@@ -422,8 +454,14 @@ section {
 
     .hero-image {
         order: 2;
-        flex-basis: 50%;
+        /* width: 20vw; */
         height: 40vh;
+        flex-basis: 20%;
+    }
+
+    .hero-title,
+    .hero-subtitle {
+        text-align: left;
     }
 
     /* HOME PAGE */
@@ -444,8 +482,6 @@ section {
     .featured-article {
         flex-flow: row nowrap;
     }
-
-     
     
     .featured-article .article-title {
         font-size: 2em;
@@ -463,11 +499,14 @@ section {
     .author-line {
         align-items: center;
         justify-content: space-between;
+        margin-top: 50px;
     }
 
     .article-title,
-    .article-subtitle {
+    .article-subtitle,
+    .article-body {
         order: 0;
+        text-align: left;
     }
 
     .article-banner-img {
@@ -477,7 +516,8 @@ section {
     }
 
     .article-details {
-        margin-left: 30px;
+        margin-left: 20px;
+        align-items: flex-start;
     }
 }
 
@@ -495,6 +535,10 @@ section {
         margin: 30px 20px;
         flex-basis: 20%;
         width: 100%;
+    }
+
+    header {
+        padding: 50px 20%;
     }
     
 }
